inital images, favicon added. Working on heading and first glance of page. have to fix top of image covering the h1

--- a/index.html
+++ b/index.html
@@ -5,8 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Apple iCast Projector</title>
     <link rel="stylesheet" href="main.css">
+    <link rel="icon" href="images/applefavicon.png" type="image/png">
 </head>
 <body>
-    
+
+<header class="site-header">
+  <div class="logo">
+    <img src="images/applelogo.jpg" alt="Apple logo">
+  </div>
+  <nav class="main-nav">
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">Features</a></li>
+      <li><a href="#">Gallery</a></li>
+      <li><a href="#">Pre Order</a></li>
+      <li><a href="#">Store</a></li>
+      <li><a href="#">iPhone</a></li>
+      <li><a href="#">iPod</a></li>
+      <li><a href="#">iHat</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Merch</a></li>
+    </ul>
+  </nav>
+</header>
+    <section class="hero">
+        <h1>Apple iCast</h1>
+        <p>The world's most advanced personal projector.</p>
+        <button>Pre-Order Now</button>
+        <img src="images/appleprojector.png" alt="Apple iCast Projector">
+    </section>
+
 </body>
 </html>
