fixed text to image positioning

--- a/index.html
+++ b/index.html
@@ -29,10 +29,12 @@
   </nav>
 </header>
     <section class="hero">
+    <img src="images/appleprojector.png" alt="Apple iCast Projector" class="hero-image">
+    <div class="hero-content">
         <h1>Apple iCast</h1>
         <p>The world's most advanced personal projector.</p>
         <button>Pre-Order Now</button>
-        <img src="images/appleprojector.png" alt="Apple iCast Projector">
+    </div>
     </section>
 
 </body>
