images and features grid added

--- a/index.html
+++ b/index.html
@@ -37,5 +37,25 @@
     </div>
     </section>
 
+<section id="features" class="features">
+  <h2>Brilliant in Every Detail</h2>
+  <p>Experience cinema-grade clarity, portability, and intelligence — all in one sleek device.</p>
+
+  <div class="feature-grid">
+    <div class="feature">
+      <img src="images/feature1.png" alt="4K Clarity">
+      <h3>4K Ultra HD</h3>
+    </div>
+    <div class="feature">
+      <img src="images/feature2.png" alt="AI Auto Focus">
+      <h3>AI Auto Focus</h3>
+    </div>
+    <div class="feature">
+      <img src="images/feature3.png" alt="Seamless Connectivity">
+      <h3>Seamless Connectivity</h3>
+    </div>
+  </div>
+</section>
+
 </body>
 </html>
