feature grid and images complete. html for preorders complete

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="images/applefavicon.png" type="image/png">
 </head>
 <body>
-
+<!--heading and nav-->
 <header class="site-header">
   <div class="logo">
     <img src="images/applelogo.jpg" alt="Apple logo">
@@ -28,6 +28,7 @@
     </ul>
   </nav>
 </header>
+<!--hero-->
     <section class="hero">
     <img src="images/appleprojector.png" alt="Apple iCast Projector" class="hero-image">
     <div class="hero-content">
@@ -36,25 +37,35 @@
         <button>Pre-Order Now</button>
     </div>
     </section>
-
+<!--features-->
 <section id="features" class="features">
   <h2>Brilliant in Every Detail</h2>
   <p>Experience cinema-grade clarity, portability, and intelligence — all in one sleek device.</p>
 
   <div class="feature-grid">
     <div class="feature">
-      <img src="images/feature1.png" alt="4K Clarity">
+      <img src="images/4kuhd.png" alt="4K Clarity">
       <h3>4K Ultra HD</h3>
     </div>
     <div class="feature">
-      <img src="images/feature2.png" alt="AI Auto Focus">
+      <img src="images/autofocus.png" alt="AI Auto Focus">
       <h3>AI Auto Focus</h3>
     </div>
     <div class="feature">
-      <img src="images/feature3.png" alt="Seamless Connectivity">
+      <img src="images/appleairplay.png" alt="Seamless Connectivity">
       <h3>Seamless Connectivity</h3>
     </div>
   </div>
+</section>
+<!--Preorders-->
+<section id="preorder" class="preorder">
+  <h2>Be the First to Experience iCast</h2>
+  <p>Reserve your Apple iCast today and be part of the next evolution in projection technology.</p>
+  <form class="preorder-form">
+    <input type="text" placeholder="Full Name" required>
+    <input type="email" placeholder="Email Address" required>
+    <button type="submit">Reserve Now</button>
+  </form>
 </section>
 
 </body>
