--- a/index.html
+++ b/index.html
@@ -67,6 +67,13 @@
     <button type="submit">Reserve Now</button>
   </form>
 </section>
-
+<footer class="site-footer">
+  <p>© 2025 AppleBarr Inc. All rights reserved.</p>
+  <ul>
+    <li><a href="#">Privacy Policy</a></li>
+    <li><a href="#">Terms of Use</a></li>
+    <li><a href="#">Support</a></li>
+  </ul>
+</footer>
 </body>
 </html>
