styles for footer/preorder. html and style for models.

--- a/index.html
+++ b/index.html
@@ -67,6 +67,41 @@
     <button type="submit">Reserve Now</button>
   </form>
 </section>
+<section id="models" class="models">
+  <h2>iCast Models & Features</h2>
+  <div class="models-grid">
+    <div class="model">
+      <h3>iCast Mini</h3>
+      <ul>
+        <li>1080p Resolution</li>
+        <li>Compact Design</li>
+        <li>Wi-Fi & Bluetooth</li>
+        <li>4 Hours Battery Life</li>
+        <li>Standard Lens</li>
+      </ul>
+    </div>
+    <div class="model">
+      <h3>iCast Pro</h3>
+      <ul>
+        <li>4K Ultra HD Resolution</li>
+        <li>Automatic Keystone Adjustment</li>
+        <li>Wi-Fi 6 & Bluetooth 5.3</li>
+        <li>6 Hours Battery Life</li>
+        <li>Pro-Grade Lens</li>
+      </ul>
+    </div>
+    <div class="model">
+      <h3>iCast Max</h3>
+      <ul>
+        <li>8K Display Support</li>
+        <li>Smart Gesture Controls</li>
+        <li>Dolby Vision & Atmos</li>
+        <li>8 Hours Battery Life</li>
+        <li>Studio-Quality Lens</li>
+      </ul>
+    </div>
+  </div>
+</section>
 <footer class="site-footer">
   <p>© 2025 AppleBarr Inc. All rights reserved.</p>
   <ul>
